# canvas-plugin-forge

./: .envrc  .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
misc/demo-pdf-generator/: .gitignore  pyproject.toml
misc/demo-pdf-generator/config/: imaging_report_single_template.yaml  lab_report_multi_template.yaml  specialty_report_no_template.yaml
misc/demo-pdf-generator/src/demo_pdf_generator/: __init__.py  cli.py  generator.py  models.py
misc/demo-pdf-generator/templates/: imaging_report.html  lab_report.html  specialty_report.html
plugins/extend-ai-document-processor/: .envrc  README.md  pyproject.toml
plugins/extend-ai-document-processor/extend_ai_document_processor/: CANVAS_MANIFEST.json  README.md  __init__.py  categorize.py  constants.py  effects.py  match.py  models.py
plugins/extend-ai-document-processor/extend_ai_document_processor/prefill/: __init__.py  extraction.py  main.py  scoring.py
plugins/extend-ai-document-processor/extend_ai_document_processor/protocols/: __init__.py  document_processor.py
plugins/extend-ai-document-processor/tests/: __init__.py  conftest.py  test_categorize_helpers.py  test_effects.py  test_extraction.py  test_match.py  test_match_integration.py  test_models.py  test_scoring.py
plugins/weight-loss-charting/: pyproject.toml
plugins/weight-loss-charting/.cpa-workflow-artifacts/: costs_aggregation.json  coverage-report-20260211-171704.md  db-performance-review-20260211-173509.md  security-review-20260211-172906.md  user_inputs_aggregation.json  wrap-up-report-20260211-174728.md
plugins/weight-loss-charting/tests/: test_chart_button.py  test_charting_api.py
plugins/weight-loss-charting/weight_loss_charting/: CANVAS_MANIFEST.json  README.md
(+60 files in other folders)
